fixed text color and spacing in both standard and responsive

--- a/Style.css
+++ b/Style.css
@@ -47,17 +47,23 @@ header {
 h1 {
 	font-family: "Amatic SC", arial, sans-serif;
 	font-size: 8rem;
-	margin: 0 auto;
 	top: 200px;
-	left: 640px;
-	position: absolute;
+	margin-top: 140px;
+	padding-top: 60px;
+}
+.header_container {
+	display: flex;
+	justify-content: center;
 
 }
 .intro_under_title{
 	position: absolute;
 	margin: 0 auto;
-	top: 310px;
-	left: 640px;
+	max-width: 80%;
+}
+.header_paragraph_container {
+	display: flex;
+	justify-content: center;
 }
 h2 {
 	font-family: "Amatic SC", arial, sans-serif;
@@ -120,7 +126,6 @@ p {
 	position: relative;
 	width: 100%;
 	height: auto;
-	padding: 50px;
 }
 .contact_section {
 	background-color: #3f6ab5;
@@ -172,17 +177,25 @@ p {
 
 @media screen and (max-width: 600px) {
 	html {
-		font-size: 9px;
+		font-size: 10px;
 	}
-
+	h1{
+		margin-top: 200px;
+	}
 	nav {
 		border-bottom: solid #3f6ab5;
 	}
-
+	header {
+		width: 100%;
+		height: 620px;
+		position: relative;
+	}
 	.content {
 		padding: 0;
 	}
-
+	.links_content {
+		padding-left: 100px;
+	}
 	.sections_projects {
 		padding: 0;
 	}
@@ -198,7 +211,7 @@ p {
 	.about_section_astronaut_jumpingjack_image{
 		display: none;
 	}
-	.homepage_section_astronaut_floating_image  {
+	.homepage_section_astronaut_floating_image {
 		display: none;
 	}
 	.homepage_section_astronaut_reaching_image {
